--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -156,7 +156,7 @@ nav {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 0 2em;
+    padding: 0 4em;
     width: 100%;
     border-bottom: 2px solid #F19D57;
     padding-bottom: 1em;
