--- a/sass/_staff.scss
+++ b/sass/_staff.scss
@@ -32,5 +32,9 @@
 
   .staff {
     margin-bottom: 10em;
+
+    img {
+      margin-bottom: 1em;
+    }
   }
 }
